--- a/templates/confirmation_page.html
+++ b/templates/confirmation_page.html
@@ -11,7 +11,7 @@
   <div class="container-fluid">
     <div class="jumbotron text-center full-height">
       <h1>Thank You</h1>
-      <p><em>Your registration has been confirmed through < {{ email }} >.</em></p>
+      <p><em>Your registration has been confirmed through {{ email }}.</em></p>
     </div>
   </div>
 
